# advent-of-code

./: .gitignore  README.md
2019/: 02.py  03.py  04.py  05.py  06.py  intcode.py  sol05.py  sol07.py  sol08.py
c/: .clang-format  .gitignore  Makefile  README.md  main.c
go/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
java/: README.md
python/: .flake8  README.md  gen_solution.py  pyproject.toml  requirements-dev.txt  requirements.txt
python/common/: setup.cfg
python/common/common/year2018/: cpu.py
python/src/aoc/: __main__.py  cli.py  solution.py  utils.py
python/src/aoc/year2016/: __init__.py  day01.py
python/src/aoc/year2018/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/src/aoc/year2018/tests/: test_sol01.py  test_sol03.py  test_sol04.py  test_sol05.py  test_sol06.py  test_sol07.py  test_sol08.py  test_sol09.py  test_sol11.py  test_sol14.py  test_sol15.py  test_sol20.py  test_sol22.py  test_sol25.py
python/src/aoc/year2019/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
python/src/aoc/year2019/tests/: test_sol01.py  test_sol14.py
python/src/aoc/year2022/: __init__.py  day01.py  day09.py  day10.py  day11.py  day12.py  day13.py
python/utils/: setup.cfg  utils.py
python/year2016/: sol01.py
python/year2018/: README.md  sol01.py  sol02.py  sol03.py  sol04.py  sol05.py  sol06.py  sol07.py  sol08.py  sol09.py  sol10.py  sol11.py  sol12.py  sol13.py  sol14.py  sol15.py  sol16.py  sol17.py  sol18.py  sol19.py  sol20.py  sol21.py  sol22.py  sol23.py  sol24.py  sol25.py
python/year2018/input/: 17.txt
python/year2018/input/test/: 16.txt
python/year2018/tests/: test_sol01.py  test_sol03.py  test_sol04.py  test_sol05.py  test_sol06.py  test_sol07.py  test_sol08.py  test_sol09.py  test_sol11.py  test_sol14.py  test_sol15.py  test_sol20.py  test_sol22.py  test_sol25.py
python/year2019/: sol01.py  sol03.py  sol04.py  sol06.py  sol08.py  sol13.py  sol14.py
python/year2019/tests/: test_sol01.py  test_sol14.py
python/year2022/: sol01.py  sol09.py  sol10.py  sol11.py  sol12.py  sol13.py
python/year_2018/: 01.py
python/year_2019/: intcode.py  sol04.py  sol12.py
rust/: .editorconfig  Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/aoc_cli/: Cargo.toml
rust/crates/aoc_cli/src/: args.rs  lib.rs  session.rs
rust/crates/aoc_lib/: Cargo.toml
rust/crates/aoc_lib/src/: heap.rs  lib.rs  rational.rs  skip_nth.rs  traits.rs
rust/crates/aoc_lib/src/geom/: mod.rs  point.rs  vector.rs
rust/crates/aoc_lib/src/matrix/: direction.rs  display.rs  gauss.rs  index.rs  iter.rs  matrix.rs  mod.rs  position.rs  square.rs  vector.rs
rust/crates/year2023/: Cargo.toml
rust/crates/year2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  lib.rs
rust/crates/year2024/: Cargo.toml
rust/crates/year2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
rust/crates/year2025/: Cargo.toml
rust/crates/year2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
rust/src/: main.rs
year_2019/: intcode.py  sol01.py  sol05.py  sol07.py  sol08.py  sol09.py  sol10.py  (+2 more)
(+153 files in other folders)
