[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
image = "0.25.5"
itertools = "0.12.0"
shellexpand = "3.1.0"
test-case = "3.3.1"
ureq = "2.12.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allowed pedantic rules
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
