[package]
name = "aoc_cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "aoc"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

year2023 = { path = "../year2023" }
year2024 = { path = "../year2024" }

[lints]
workspace = true
