[package]
name = "aoc_cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "aoc"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
shellexpand = { workspace = true }
ureq = { workspace = true }

year2023 = { path = "../year2023" }
year2024 = { path = "../year2024" }
year2025 = { path = "../year2025" }

[lints]
workspace = true
