[package]
name = "year2023"
version = { workspace = true }
edition = { workspace = true }

[lib]

[dependencies]
anyhow = { workspace = true }
num-integer = "0.1.45"
itertools = { workspace = true }

aoc_lib = { path = "../aoc_lib" }
aoc_traits = { path = "../aoc_traits" }

[dev-dependencies]
test-case = "3.3.1"

[lints]
workspace = true
