[package]
name = "year2023"
version = { workspace = true }
edition = { workspace = true }

[lib]

[dependencies]
anyhow = { workspace = true }
num-integer = { workspace = true }
itertools = { workspace = true }

aoc_lib = { path = "../aoc_lib" }

[dev-dependencies]
test-case = { workspace = true }

[lints]
workspace = true
