[package]
name = "year2024"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
image = { workspace = true }

aoc_lib = { path = "../aoc_lib" }

[dev-dependencies]
test-case = { workspace = true }

[lints]
workspace = true
